extends Control


func _on_level_1_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_1.tscn")


func _on_level_2_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_2.tscn")


func _on_level_3_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_3.tscn")


func _on_level_4_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_4.tscn")


func _on_level_5_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_5.tscn")


func _on_level_6_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_6.tscn")


func _on_level_7_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_7.tscn")


func _on_level_8_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_8.tscn")


func _on_level_9_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/Level/Level_9.tscn")


func _on_back_pressed() -> void:
	get_tree().change_scene_to_file("res://Scene/title_screen.tscn")
